--- a/src/style/global.style.css
+++ b/src/style/global.style.css
@@ -5,8 +5,14 @@
 
 html, body {
     scroll-behavior: smooth;
+    background: #F4F4F3;
 }
 
+#root {
+    max-width: 720px;
+    width: 100%;
+    margin: 0 auto;
+}
 
 @font-face {
     font-family: SFPro;
